--- a/.gitignore
+++ b/.gitignore
@@ -31,6 +31,7 @@ bin/
 MANIFEST
 include/
 pyvenv.cfg
+options.txt
 
 # PyInstaller
 #  Usually these files are written by a python script from a template
