--- a/requirements.txt
+++ b/requirements.txt
@@ -1,7 +1,46 @@
-###### Requirements without Version Specifiers ######
-lark
-z3-solver
-cpmpy
-exact
-setuptools
-###### Requirements with Version Specifiers ######
+absl-py==2.1.0
+appnope==0.1.4
+asttokens==2.4.1
+comm==0.2.1
+cpmpy==0.9.19
+cppyy==2.4.2
+cppyy-backend==1.14.10
+cppyy-cling==6.27.1
+CPyCppyy==1.12.12
+debugpy==1.8.1
+decorator==5.1.1
+exact==1.0.3
+executing==2.0.1
+importlib-resources==6.1.1
+ipykernel==6.29.2
+ipython==8.22.1
+jedi==0.19.1
+jupyter_client==8.6.0
+jupyter_core==5.7.1
+lark==1.1.9
+matplotlib-inline==0.1.6
+nest-asyncio==1.6.0
+numpy==1.26.4
+ortools==9.8.3296
+packaging==23.2
+pandas==2.2.1
+parso==0.8.3
+pexpect==4.9.0
+platformdirs==4.2.0
+prompt-toolkit==3.0.43
+protobuf==4.25.3
+psutil==5.9.8
+ptyprocess==0.7.0
+pure-eval==0.2.2
+Pygments==2.17.2
+python-dateutil==2.8.2
+pytz==2024.1
+pyzmq==25.1.2
+setuptools==69.1.1
+six==1.16.0
+stack-data==0.6.3
+tornado==6.4
+traitlets==5.14.1
+tzdata==2024.1
+wcwidth==0.2.13
+z3-solver==4.12.5.0
